@@ -1,5 +1,16 @@
 2005-09-06  Brian Cameron <Brian.Cameron@sun.com>
 
+	* daemon/auth.c, daemon/gdm.c, daemon/slave.c,
+	  daemon/verify-pam.c, gui/gdmchooser.c, gui/gdmcomm.c,
+	  gui/gdmdynamic.c, gui/gdmlogin.c, gui/gdmphotosetup.c,
+	  gui/gdmsetup.c, gui/greeter/greeter.c,
+	  gui/greeter/greeter_canvas_item.c, 
+	  gui/greeter/greeter_session.c, 
+	  gui/modules/keymouselistener.c,
+	  utils/gdm-dmx-reconnect-proxy.c,
+	  vicious-extensions/vc-misc.c:  Correct memory leaks.
+	  Fixes bug #315388, patch by Ray Strode with minor
+	  tweaks by myself.
 	* gui/gdmphotosetup.c: Corrected definition of void
 	  function to avoid compiler warning.
 
